--- a/headers.tex
+++ b/headers.tex
@@ -24,6 +24,7 @@
 \newtheorem{corollary}[theorem]{Corollary}
 \newtheorem{lemma}[theorem]{Lemma}
 \newtheorem{definition}[theorem]{Definition}
+\newtheorem{fact}[theorem]{Fact}
 
 % \newcommand{\proof}{{\bf Proof.}\hskip 0.3truecm}
 % \newcommand{\endproof}{\quad \(\Box\)}
@@ -32,11 +33,43 @@
 \newcommand{\setof}[1]{\left\{#1 \right\}}
 % \newcommand{\sizeof}[1]{\left|#1 \right|}
 \newcommand{\abs}[1]{\left|#1 \right|}
+\newcommand{\mean}[1]{\mathbb{E}[#1]}
+\newcommand{\ceil}[1]{\left\lceil#1\right\rceil}
+\newcommand{\Abs}[1]{\left\Vert#1\right\Vert}
 
 \newcommand{\bsym}[1]{\boldsymbol{#1}}
 \newcommand{\myord}[1]{{#1}^{\rm{th}}}
 \newcommand{\rea}{\mathbb{R}}
+\newcommand{\gr}{\mathcal{G}}
+\newcommand{\vecd}{\bsym{d}}
+\newcommand{\veca}{\bsym{a}}
+\newcommand{\vecb}{\bsym{b}}
+\newcommand{\vece}{\bsym{e}}
+\newcommand{\allone}{\bsym{1}}
+\newcommand{\vecl}{\bsym{l}}
+\newcommand{\vecv}{\bsym{v}}
+\newcommand{\vecpi}{\bsym{\pi}}
+\newcommand{\vecx}{\bsym{x}}
+
 \newcommand{\lap}{\bsym{L}}
+\newcommand{\matd}{\bsym{D}}
+\newcommand{\mata}{\bsym{A}}
+\newcommand{\matb}{\bsym{B}}
+\newcommand{\matw}{\bsym{W}}
+\newcommand{\matp}{\bsym{P}}
+\newcommand{\matf}{\bsym{F}}
+\newcommand{\mate}{\bsym{I}}
+\newcommand{\matq}{\bsym{Q}}
+\newcommand{\matr}{\bsym{R}}
+\newcommand{\mats}{\bsym{S}}
+\newcommand{\matx}{\bsym{X}}
+\newcommand{\maty}{\bsym{Y}}
+\newcommand{\matz}{\bsym{Z}}
+
+\newcommand{\lemref}[1]{Lemma~\ref{#1}}
+\newcommand{\thmref}[1]{Theorem~\ref{#1}}
+\newcommand{\probref}[1]{Problem~\ref{#1}}
+\newcommand{\algoref}[1]{Algorithm~\ref{#1}}
 
 
 \DeclareMathOperator*{\argmin}{arg\,min}
