--- a/main.bib
+++ b/main.bib
@@ -26,3 +26,129 @@
   eprint  = {1802.02556},
   pages   = {961--971}
 }
+@book{KeSn76,
+  title     = {Finite Markov Chains},
+  author    = {Kemeny, John G and Snell, James Laurie},
+  year      = 1976,
+  publisher = {Springer, New York}
+}
+@article{NeWoFi78,
+  title     = {An analysis of approximations for maximizing submodular set functions},
+  author    = {Nemhauser, George L and Wolsey, Laurence A and Fisher, Marshall L},
+  journal   = {Mathematical Programming},
+  volume    = {14},
+  number    = {1},
+  pages     = {265--294},
+  year      = {1978},
+  publisher = {Springer}
+}
+@article{JoLi84,
+  title   = {{Extensions of Lipschitz mappings into a Hilbert space}},
+  author  = {Johnson, William B and Lindenstrauss, Joram},
+  journal = {Contemporary Mathematics},
+  volume  = {26},
+  pages   = {189-206},
+  year    = {1984}
+}
+@inproceedings{CoKyMiPaJaPeRaXu14,
+  title        = {Solving {SDD} linear systems in nearly $m \log^{1/2} n$ time},
+  author       = {Cohen, Michael B and Kyng, Rasmus and Miller, Gary L and Pachocki, Jakub W and Peng, Richard and Rao, Anup B and Xu, Shen Chen},
+  booktitle    = {Proceedings of the Forty-Sixth Annual ACM Symposium on Theory of Computing},
+  pages        = {343--352},
+  year         = {2014},
+  organization = {ACM}
+}
+@article{SpTe14,
+  author  = {Spielman, Daniel A and Teng, Shang-Hua},
+  title   = {Nearly linear time algorithms for preconditioning and solving symmetric, diagonally dominant linear systems},
+  journal = {SIAM Journal on Matrix Analysis and Applications},
+  volume  = {35},
+  number  = {3},
+  pages   = {835-885},
+  year    = {2014}
+}
+@inproceedings{Ku13,
+  title        = {Konect: the koblenz network collection},
+  author       = {Kunegis, J{\'e}r{\^o}me},
+  booktitle    = {Proceedings of the 22nd International World Wide Web Conference},
+  pages        = {1343--1350},
+  year         = {2013},
+  organization = {ACM}
+}
+@misc{JuAn14,
+  author       = {Jure Leskovec and Andrej Krevl},
+  title        = {{SNAP Datasets}: {Stanford} Large Network Dataset Collection},
+  howpublished = {\url{http://snap.stanford.edu/data}},
+  month        = jun,
+  year         = 2014
+}
+
+@article{YiGuWeTiHa10,
+  year    = {2010},
+  title   = {{A Unified Framework for Link Recommendation Using Random Walks}},
+  author  = {Yin, Zhijun and Gupta, Manish and Weninger, Tim and Han, Jiawei},
+  journal = {2010 International Conference on Advances in Social Networks Analysis and Mining},
+  doi     = {10.1109/asonam.2010.27},
+  pages   = {152--159}
+}
+@article{HuWaYeChLa16,
+  year    = {2016},
+  title   = {{Background Extraction Using Random Walk Image Fusion}},
+  author  = {Hua, Kai-Lung and Wang, Hong-Cyuan and Yeh, Chih-Hsiang and Cheng, Wen-Huang and Lai, Yu-Chi},
+  journal = {IEEE Transactions on Cybernetics},
+  issn    = {2168-2267},
+  doi     = {10.1109/tcyb.2016.2640288},
+  pmid    = {28026799},
+  pages   = {423--435},
+  number  = {1},
+  volume  = {48}
+}
+@article{XuZhXiYu14,
+  year    = {2014},
+  title   = {{Detection on application layer DDoS using random walk model}},
+  author  = {Xu, Chuan and Zhao, Guofeng and Xie, Gaogang and Yu, Shui},
+  journal = {2014 IEEE International Conference on Communications (ICC)},
+  issn    = {1550-3607},
+  doi     = {10.1109/icc.2014.6883402},
+  pages   = {707--712}
+}
+@article{WaJiZhZh10,
+  year    = {2006},
+  title   = {{Image annotation refinement using random walk with restarts}},
+  author  = {Wang, Changhu and Jing, Feng and Zhang, Lei and Zhang, Hong-Jiang},
+  journal = {Proceedings of the 14th annual ACM international conference on Multimedia - MULTIMEDIA '06},
+  doi     = {10.1145/1180639.1180774},
+  pages   = {647--650}
+}
+@article{LiPeMaQiWeQi10,
+  year    = {2010},
+  title   = {{Improving diversity in Web search results re-ranking using absorbing random walks}},
+  author  = {Lin, Gu-Li and Peng, Hong and Ma, Qian-Li and Wei, Jia and Qin, Jiang-Wei},
+  journal = {2010 International Conference on Machine Learning and Cybernetics},
+  doi     = {10.1109/icmlc.2010.5580733},
+  pages   = {2416--2421},
+  volume  = {5}
+}
+@article{GoViHuRa10,
+  year    = {2010},
+  title   = {{Random Walks on Graphs for Salient Object Detection in Images}},
+  author  = {Gopalakrishnan, Viswanath and Hu, Yiqun and Rajan, Deepu},
+  journal = {IEEE Transactions on Image Processing},
+  issn    = {1057-7149},
+  doi     = {10.1109/tip.2010.2053940},
+  pmid    = {21078566},
+  pages   = {3232--3242},
+  number  = {12},
+  volume  = {19}
+}
+@article{ZeCaZhGuXi10,
+  year    = {2010},
+  title   = {{Random-walk based approach to detect clone attacks in wireless sensor networks}},
+  author  = {Zeng, Yingpei and Cao, Jiannong and Zhang, Shigeng and Guo, Shanqing and Xie, Li},
+  journal = {IEEE Journal on Selected Areas in Communications},
+  issn    = {0733-8716},
+  doi     = {10.1109/jsac.2010.100606},
+  pages   = {677--691},
+  number  = {5},
+  volume  = {28}
+}
